2017-10-22  Andrew Burgess  <andrew.burgess@embecosm.com>

	* server/GdbServerImpl.cpp (GdbServerImpl::interruptTimeout):
	Initialise.
	(GdbServerImpl::rspContinue): Remove interruptTimeout.
	* server/GdbServerImpl.h (GdbServerImpl::interruptTimeout):
	Declare.

2017-10-22  Andrew Burgess  <andrew.burgess@embecosm.com>

	* server/GdbServerImpl.cpp (GdbServerImpl::GdbServerImpl): Update
	member variable name.
	(GdbServerImpl::rspContinue): Likewise.
	(GdbServerImpl::rspCommand): Likewise.
	* server/GdbServerImpl.h (GdbServerImpl::timeout): Renamed to...
	(GdbServerImpl::mTimeout): ...this.

2017-10-22  Andrew Burgess  <andrew.burgess@embecosm.com>

	* server/GdbServerImpl.cpp (GdbServerImpl::rspContinue): New definition.
	(GdbServerImpl::rspSingleStep): New definition.
	(GdbServerImpl::rspClientRequest): Move continue and step logic
	into separate functions.
	* server/GdbServerImpl.h (GdbServerImpl::rspContinue): New declaration.
	(GdbServerImpl::rspSingleStep): New declaration.

2017-09-21  Andrew Burgess  <andrew.burgess@embecosm.com>

	* server/GdbServerImpl.cpp (GdbServerImpl::rspSyscallRequest): Fix
	up usage of new PRIxREG.
	* targets/common/RegisterSizes.h (PRIuREG): Changed to...
	(PRIxREG): ...this.

2017-10-20  Andrew Burgess  <andrew.burgess@embecosm.com>

	* configure.ac: Make -with-wall the default, turning on -Wall.
	* configure: Regenerate.

2017-10-20  Andrew Burgess  <andrew.burgess@embecosm.com>

	* targets/common/RegisterSizes.h (PRIuREG): Define base on whether
	we're doing 32 or 64 bit build.
	* server/GdbServerImpl.cpp (GdbServerImpl::rspSyscallRequest):
	Make use of PRIuREG format specifier.

2017-10-20  Andrew Burgess  <andrew.burgess@embecosm.com>

	* server/GdbServerImpl.cpp (GdbServerImpl::rspSyscallReply): Don't
	compare unsigned variable with signed immediate.

2017-10-20  Andrew Burgess  <andrew.burgess@embecosm.com>

	* server/RspPacket.cpp (RspPacket::packStr): Change type of some
	locals.
	(RspPacket::packHexstr): Likewise.