@@ -1,5 +1,10 @@
 2017-10-22  Andrew Burgess  <andrew.burgess@embecosm.com>
 
+	* server/Utils.cpp (Utils::hex2RegVal): Use shift and bitwise or.
+	(Utils::hex2Val): Likewise.
+
+2017-10-22  Andrew Burgess  <andrew.burgess@embecosm.com>
+
 	* server/GdbServerImpl.cpp (GdbServerImpl::interruptTimeout):
 	Initialise.
 	(GdbServerImpl::rspContinue): Remove interruptTimeout.
